--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
         <input type="text" id="nameInput" placeholder="Your name">
         <br />
         <br />
-        <label for="emotionSelect">Select emotion:</label>
+        <label for="emotionSelect">Select text:</label>
         <select id="emotionSelect">
-            <option value="happy">Happy</option>
-            <option value="sad">Sad</option>
+            <option value="happy">1</option>
+            <option value="sad">2</option>
         </select>
         
         <button onclick="startRecording()">Start</button>
